# discord-cli

./: .gitignore  README.md  progress.md  pyproject.toml
src/discord_cli/: cache.py  cli.py  client.py  config.py  credential.py  gateway.py  output.py  snowflake.py  super_properties.py  tokens.py  validation.py
src/discord_cli/auth/: command.py  decrypt.py  extract.py  keychain.py
src/discord_cli/commands/: list.py  read.py  search.py  stream.py  whoami.py
tests/: test_auth_command.py  test_auth_decrypt.py  test_auth_extract.py  test_auth_keychain.py  test_cache.py  test_cli_errors.py  test_client.py  test_commands.py  test_config.py  test_gateway.py  test_keyring.py  test_output.py  test_read_commands.py  test_search_commands.py  test_stream.py  test_super_properties.py  test_tokens.py  test_validation.py  test_whoami.py
