[project]
name = "discord-cli"
version = "0.1.0"
description = "Read-only Discord CLI for coding agents."
readme = "README.md"
authors = [
    { name = "jjovalle99", email = "jjmov99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ccl-chromium-reader",
    "cryptography>=46.0.6",
    "cyclopts>=3.0",
    "httpx>=0.28",
    "keyring>=25.7.0",
]

[tool.uv.sources]
ccl-chromium-reader = { git = "https://github.com/cclgroupltd/ccl_chromium_reader.git", rev = "552516720761397c4d482908b6b8b08130b313a1" }

[project.scripts]
discord-cli = "discord_cli.cli:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ANN"]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
